--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./client/presentation_module/dist
+          publish_dir: ./public
